--- a/telco_customer_churn.ipynb
+++ b/telco_customer_churn.ipynb
@@ -397,7 +397,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# III. Explorative Data Analysis"
+    "# III. Exploratory Data Analysis (EDA)"
    ],
    "metadata": {
     "collapsed": false
